// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DatePicker prop locale should works 1`] = `
Array [
  <div
    class="g-picker g-picker-outlined css-var-root g-picker-css-var"
  >
    <div
      class="g-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        placeholder="Избери дата"
        size="12"
        value="2000-01-01"
      />
      <span
        class="g-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="gicon gicon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
            />
          </svg>
        </span>
      </span>
      <span
        class="g-picker-clear"
        role="button"
      >
        <span
          aria-label="close-circle"
          class="gicon gicon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="g-picker-dropdown g-slide-up-appear g-slide-up-appear-prepare g-slide-up css-var-root g-picker-css-var g-picker-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-picker-panel-container g-picker-date-panel-container"
      style="margin-left: 0px; margin-right: auto;"
      tabindex="-1"
    >
      <div
        class="g-picker-panel-layout"
      >
        <div>
          <div
            class="g-picker-panel"
            tabindex="0"
          >
            <div
              class="g-picker-date-panel"
            >
              <div
                class="g-picker-header"
              >
                <button
                  aria-label="Последна година (Control + left)"
                  class="g-picker-header-super-prev-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="g-picker-super-prev-icon"
                  />
                </button>
                <button
                  aria-label="Предишен месец (PageUp)"
                  class="g-picker-header-prev-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="g-picker-prev-icon"
                  />
                </button>
                <div
                  class="g-picker-header-view"
                >
                  <button
                    aria-label="Избор на месец"
                    class="g-picker-month-btn"
                    tabindex="-1"
                    type="button"
                  >
                    јан
                  </button>
                  <button
                    aria-label="Избор на година"
                    class="g-picker-year-btn"
                    tabindex="-1"
                    type="button"
                  >
                    2000
                  </button>
                </div>
                <button
                  aria-label="Следващ месец (PageDown)"
                  class="g-picker-header-next-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="g-picker-next-icon"
                  />
                </button>
                <button
                  aria-label="Следваща година (Control + right)"
                  class="g-picker-header-super-next-btn"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="g-picker-super-next-icon"
                  />
                </button>
              </div>
              <div
                class="g-picker-body"
              >
                <table
                  class="g-picker-content"
                >
                  <thead>
                    <tr>
                      <th>
                        пo
                      </th>
                      <th>
                        вт
                      </th>
                      <th>
                        ср
                      </th>
                      <th>
                        че
                      </th>
                      <th>
                        пе
                      </th>
                      <th>
                        сa
                      </th>
                      <th>
                        нe
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="g-picker-cell"
                        title="1999-12-27"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="1999-12-28"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          28
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="1999-12-29"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          29
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="1999-12-30"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          30
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="1999-12-31"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          31
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-hover g-picker-cell-selected g-picker-cell-in-view"
                        title="2000-01-01"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-02"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          2
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-03"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-04"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-05"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-06"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          6
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-07"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          7
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-08"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          8
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-09"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          9
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-10"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          10
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-11"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          11
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-12"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          12
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-13"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          13
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-14"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          14
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-15"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          15
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-16"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          16
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-17"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          17
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-18"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          18
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-19"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          19
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-20"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          20
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-21"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          21
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-22"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          22
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-23"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          23
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-24"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          24
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-25"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          25
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-26"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          26
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-27"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          27
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-28"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          28
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-29"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          29
                        </div>
                      </td>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-30"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          30
                        </div>
                      </td>
                    </tr>
                    <tr>
                      <td
                        class="g-picker-cell g-picker-cell-in-view"
                        title="2000-01-31"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          31
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="2000-02-01"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          1
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="2000-02-02"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          2
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="2000-02-03"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          3
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="2000-02-04"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          4
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="2000-02-05"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          5
                        </div>
                      </td>
                      <td
                        class="g-picker-cell"
                        title="2000-02-06"
                      >
                        <div
                          class="g-picker-cell-inner"
                        >
                          6
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="g-picker-footer"
          >
            <ul
              class="g-picker-ranges"
            >
              <li
                class="g-picker-now"
              >
                <a
                  aria-disabled="false"
                  class="g-picker-now-btn"
                >
                  Днес
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`DatePicker suffixIcon 1`] = `
Array [
  <div
    class="g-picker g-picker-outlined css-var-root g-picker-css-var"
  >
    <div
      class="g-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        placeholder="Select date"
        size="12"
        value=""
      />
      <span
        class="g-picker-suffix"
      >
        123
      </span>
    </div>
  </div>,
]
`;

exports[`DatePicker support DatePicker.generatePicker 1`] = `
<div
  class="g-picker g-picker-outlined css-var-root g-picker-css-var"
>
  <div
    class="g-picker-input"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      placeholder="Select date"
      size="12"
      value=""
    />
    <span
      class="g-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="gicon gicon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
